# division_engine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
libs/glad/src/: gl.c
shaders/: basic.frag  basic.vert  default_gui.vert  default_gui_colored.frag  default_gui_texture.frag
src/: CMakeLists.txt
src/core/: engine_core.cpp  engine_core.h  engine_state.h
src/core/components/: gl_draw_indirect_command.h  gl_mesh.h  gl_shader_program.h  gl_shader_state.h  gl_texture.h  glfw_window_data.h  gui_anchor.h  gui_bounding_box.h  gui_material.h  gui_mesh.h  gui_rect.h  gui_rect_color.h  gui_renderable.h  gui_text.h  gui_vertex.h  hierarchy.h  key_code.h  mesh.h  position.h  profile_update_data.h  render_mode.h  render_shape.h  rendered_frame_state.h  renderer_config.h  renderer_state.h  rotation.h  scale.h  text2d.h  texture_2d.h  transform.h  triangle.h  update_timestamp.h  window_config.h  window_state.h
src/core/configs/: color_mode.h  default_shaders_config.h  engine_config.h  glfw_window_config.h  key_code.h  lifecycle_config.h  render_mode.h  shader_config.h  shader_pipeline_config.h  texture2d_config.h  texture_2d_config.h
src/core/data_structures/: sparse_set.h  versioned_sparse_set.h
src/core/event_systems/: on_gui_mesh_entity_created_event_system.cpp  on_gui_mesh_entity_created_event_system.h  on_gui_mesh_entity_destroyed_event_system.cpp  on_gui_mesh_entity_destroyed_event_system.h
src/core/events/: create_gui_mesh_entity.h  destroy_gui_mesh_entity.h  gui_mesh_create_event.h  gui_mesh_created.h  gui_mesh_destroy_event.h  gui_mesh_destroyed.h
src/core/gui_composer/: gui_composer.cpp  gui_composer.h
src/core/primitives/gui/: font.h  glyph.h  gui_composer.cpp  gui_composer.h  gui_primitive_factory.cpp  gui_primitive_factory.h  gui_quad.cpp  gui_quad.h  gui_triangle.cpp  gui_triangle.h  gui_vertex.h
src/core/states/: camera_state.h  default_shaders_state.h  engine_state.h  gl_shader_pipeline_state.h  gl_shader_state.h  glfw_window_state.h  input_state.h  keyboard_state.h  platform_state.h  raw_input_state.h  renderer_state.h  resources_state.h  shader_pipeline_state.h  shader_state.h  texture2d_state.h  update_time_state.h  win32_state.h  window_state.h
src/core/states/platform/: glfw_window_state.h
src/core/systems/: check_gl_mesh_created_system.cpp  check_gl_mesh_created_system.h  check_gl_mesh_destroyed_system.cpp  check_gl_mesh_destroyed_system.h  check_gl_mesh_initialization_system.cpp  check_gl_mesh_initialization_system.h  gl_render_system.cpp  gl_render_system.h  gl_shader_program_system.cpp  gl_shader_program_system.h  glfw_input_system.cpp  glfw_input_system.h  glfw_vsync_system.cpp  glfw_vsync_system.h  glfw_window_system.cpp  glfw_window_system.h  input_system.cpp  input_system.h  loop_tick_system.cpp  loop_tick_system.h  post_render_tick_system.cpp  post_render_tick_system.h  pre_render_tick_system.cpp  pre_render_tick_system.h  profile_updates_system.cpp  profile_updates_system.h  register_input_system.cpp  register_input_system.h  render_system.cpp  render_system.h  render_tick_system.cpp  render_tick_system.h  shader_program_system.cpp  shader_program_system.h  vsync_system.cpp  vsync_system.h  win32_register_input_system.cpp  win32_register_input_system.h  window_system.cpp  window_system.h
src/core/systems/input/: platform_register_input_system.cpp  platform_register_input_system.h  register_input_system.cpp  register_input_system.h  win32_register_input_system.cpp  win32_register_input_system.h
src/core/systems/input/platform/: win32_register_input_system.cpp  win32_register_input_system.h
src/core/systems/rendering/: check_gl_mesh_created_system.cpp  check_gl_mesh_created_system.h  check_gl_mesh_destroyed_system.cpp  check_gl_mesh_destroyed_system.h  debug_render_pass_system.cpp  debug_render_pass_system.h  gl_draw_gui_mesh_system.cpp  gl_draw_gui_mesh_system.h  gl_gui_mesh_render_system.cpp  gl_gui_mesh_vertex_system.cpp  gl_gui_mesh_vertex_system.h  gl_gui_rect_system.cpp  gl_gui_rect_system.h  gl_gui_rect_vertex_system.cpp  gl_gui_rect_vertex_system.h  gl_gui_text_system.cpp  gl_gui_text_system.h  gl_gui_text_vertex_system.cpp  gl_gui_text_vertex_system.h  gl_mvp_matrix_system.cpp  gl_mvp_matrix_system.h  gl_prepare_framebuffer_system.cpp  gl_prepare_framebuffer_system.h  gl_render_gui_mesh_system.cpp  gl_render_gui_mesh_system.h  gl_render_gui_system.cpp  gl_render_gui_system.h  gl_render_system.cpp  gl_render_system.h  gl_shader_program_system.cpp  gl_shader_program_system.h  gl_text_2d_renderer_system.cpp  gl_text_2d_renderer_system.h  gl_texture2d_system.cpp  gl_texture2d_system.h  render_tick_system.cpp  render_tick_system.h
src/core/systems/window/: glfw_vsync_system.cpp  glfw_vsync_system.h  glfw_window_system.cpp  glfw_window_system.h  platform_vsync_system.cpp  platform_vsync_system.h  platform_window_system.cpp  platform_window_system.h  win32_window_system.cpp  win32_window_system.h
src/core/systems/window/platform/: glfw_vsync_system.h  glfw_window_system.cpp  glfw_window_system.h  win32_window_system.cpp  win32_window_system.h
src/core/utils/: color.h  debug_utils.cpp  disable_glm_warnings.h  engine_invariants.h  engine_state_helper.h  file_utils.cpp  font_utils.cpp  font_utils.h  gl_utils.cpp  gl_utils.h  memory.h  shader_compiler.cpp  shader_compiler.h  sparse_set.h  texture_utils.cpp  texture_utils.h
src/hook/: lifecycle.cpp  lifecycle.h
src/libs/glad/include/glad/: gl.h
src/shaders/: default_gui.vert  default_gui_font.frag  default_gui_texture.frag
src/utils/: color.h  colors.h  debug_utils.cpp  debug_utils.h  engine_invariants.h  engine_state_helper.h  file_utils.cpp  file_utils.h  gl_utils.h  gui_primitive_factory.cpp  gui_primitive_factory.h  math.h  primitive_factory.cpp  primitive_factory.h  shader_query.h  singleton_group.h  singleton_registry.h  singleton_view.h  vertex_buffer_query.h
test_hook/: global_state.h  lifecycle.cpp  lifecycle.h
tests/: colors_tests.cpp  sparse_set_tests.cpp  test_sample.cpp  test_type.h  versioned_sparse_set_tests.cpp
tests_benchmarks/: sample_benchmark.cpp
(+1 files in other folders)
